DDF-2644 Fix long title overflow issue in navigator

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigator/navigator.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigator/navigator.less
@@ -8,6 +8,9 @@
         height: auto;
         text-align: left;
         width: 100%;
+        word-wrap: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .navigation-links {
